grammar/OOPsyParser.py
# Generated from OOPsy.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OOPsyParser ( Parser ):

    grammarFileName = "OOPsy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'string'", "'char'", 
                     "'bool'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'++'", "'--'", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "'&&'", "'||'", "'['", "']'", "'('", "')'", "'{'", 
                     "'}'", "'.'", "','", "':'", "';'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'class'", "'main'", "'inherits'", "'has'", 
                     "'method'", "'constructor'", "'create'", "'of'", "'print'", 
                     "'if'", "'else'", "'repeat'", "'until'", "'input'", 
                     "'self'", "'abstract'", "'final'", "'override'", "'super'", 
                     "'public'", "'private'", "'list'", "'dict'", "'return'", 
                     "'break'", "'continue'" ]

    symbolicNames = [ "<INVALID>", "OOPSY_TYPE_INT", "OOPSY_TYPE_FLOAT", 
                      "OOPSY_TYPE_STRING", "OOPSY_TYPE_CHAR", "OOPSY_TYPE_BOOL", 
                      "BOOL_LITERAL_TRUE", "BOOL_LITERAL_FALSE", "INT_LITERAL", 
                      "FLOAT_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
                      "PLUS_OPERATOR", "MINUS_OPERATOR", "MULTIPLY_OPERATOR", 
                      "DIVIDE_OPERATOR", "MODULO_OPERATOR", "INCREMENT_OPERATOR", 
                      "DECREMENT_OPERATOR", "ASSIGNMENT_OPERATOR", "ADDITION_ASSIGNMENT_OPERATOR", 
                      "SUBTRACTION_ASSIGNMENT_OPERATOR", "MULTIPLICATION_ASSIGNMENT_OPERATOR", 
                      "DIVISION_ASSIGNMENT_OPERATOR", "EQUAL_OPERATOR", 
                      "UNEQUAL_OPERATOR", "GREATER_OPERATOR", "LESSER_OPERATOR", 
                      "GREATER_EQ_OPERATOR", "LESSER_EQ_OPERATOR", "AND_OPERATOR", 
                      "OR_OPERATOR", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_PARENTHESIS", 
                      "RIGHT_PARENTHESIS", "LEFT_BRACE", "RIGHT_BRACE", 
                      "DOT_SEPARATOR", "COMMA_SEPARATOR", "COLON_SEPARATOR", 
                      "SEMICOLON_SEPARATOR", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WHITESPACE", "CLASS_KEYWORD", "MAIN_KEYWORD", "INHERITS_KEYWORD", 
                      "HAS_ATTRIBUTE_KEYWORD", "METHOD_KEYWORD", "CONSTRUCTOR_KEYWORD", 
                      "CREATE_KEYWORD", "OF_STATEMENT", "PRINT_KEYWORD", 
                      "IF_KEYWORD", "ELSE_KEYWORD", "REPEAT_KEYWORD", "UNTIL_KEYWORD", 
                      "INPUT_STATEMENT", "SELF_KEYWORD", "ABSTRACT_CLASS", 
                      "FINAL_CLASS", "OVERRIDE_METHOD", "SUPER_CALL", "PUBLIC_MODIFIER", 
                      "PRIVATE_MODIFIER", "LIST_TYPE", "DICTIONARY_TYPE", 
                      "RETURN_STATEMENT", "BREAK_STATEMENT", "CONTINUE_STATEMENT", 
                      "IDENTIFIER" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_mainMethod = 2
    RULE_classDecl = 3
    RULE_classElement = 4
    RULE_methodDecl = 5
    RULE_attributeDecl = 6
    RULE_constructorDecl = 7
    RULE_assignment = 8
    RULE_returnStatement = 9
    RULE_expressionStatement = 10
    RULE_printStatement = 11
    RULE_createStatement = 12
    RULE_ifStatement = 13
    RULE_loopStatement = 14
    RULE_breakStatement = 15
    RULE_continueStatement = 16
    RULE_block = 17
    RULE_paramList = 18
    RULE_valueExpression = 19
    RULE_logicalExpression = 20
    RULE_logicalTerm = 21
    RULE_logicalFactor = 22
    RULE_anyExpression = 23
    RULE_methodCall = 24
    RULE_argumentList = 25
    RULE_memberAccess = 26
    RULE_typeName = 27

    ruleNames =  [ "program", "statement", "mainMethod", "classDecl", "classElement", 
                   "methodDecl", "attributeDecl", "constructorDecl", "assignment", 
                   "returnStatement", "expressionStatement", "printStatement", 
                   "createStatement", "ifStatement", "loopStatement", "breakStatement", 
                   "continueStatement", "block", "paramList", "valueExpression", 
                   "logicalExpression", "logicalTerm", "logicalFactor", 
                   "anyExpression", "methodCall", "argumentList", "memberAccess", 
                   "typeName" ]

    EOF = Token.EOF
    OOPSY_TYPE_INT=1
    OOPSY_TYPE_FLOAT=2
    OOPSY_TYPE_STRING=3
    OOPSY_TYPE_CHAR=4
    OOPSY_TYPE_BOOL=5
    BOOL_LITERAL_TRUE=6
    BOOL_LITERAL_FALSE=7
    INT_LITERAL=8
    FLOAT_LITERAL=9
    CHAR_LITERAL=10
    STRING_LITERAL=11
    PLUS_OPERATOR=12
    MINUS_OPERATOR=13
    MULTIPLY_OPERATOR=14
    DIVIDE_OPERATOR=15
    MODULO_OPERATOR=16
    INCREMENT_OPERATOR=17
    DECREMENT_OPERATOR=18
    ASSIGNMENT_OPERATOR=19
    ADDITION_ASSIGNMENT_OPERATOR=20
    SUBTRACTION_ASSIGNMENT_OPERATOR=21
    MULTIPLICATION_ASSIGNMENT_OPERATOR=22
    DIVISION_ASSIGNMENT_OPERATOR=23
    EQUAL_OPERATOR=24
    UNEQUAL_OPERATOR=25
    GREATER_OPERATOR=26
    LESSER_OPERATOR=27
    GREATER_EQ_OPERATOR=28
    LESSER_EQ_OPERATOR=29
    AND_OPERATOR=30
    OR_OPERATOR=31
    LEFT_BRACKET=32
    RIGHT_BRACKET=33
    LEFT_PARENTHESIS=34
    RIGHT_PARENTHESIS=35
    LEFT_BRACE=36
    RIGHT_BRACE=37
    DOT_SEPARATOR=38
    COMMA_SEPARATOR=39
    COLON_SEPARATOR=40
    SEMICOLON_SEPARATOR=41
    LINE_COMMENT=42
    BLOCK_COMMENT=43
    WHITESPACE=44
    CLASS_KEYWORD=45
    MAIN_KEYWORD=46
    INHERITS_KEYWORD=47
    HAS_ATTRIBUTE_KEYWORD=48
    METHOD_KEYWORD=49
    CONSTRUCTOR_KEYWORD=50
    CREATE_KEYWORD=51
    OF_STATEMENT=52
    PRINT_KEYWORD=53
    IF_KEYWORD=54
    ELSE_KEYWORD=55
    REPEAT_KEYWORD=56
    UNTIL_KEYWORD=57
    INPUT_STATEMENT=58
    SELF_KEYWORD=59
    ABSTRACT_CLASS=60
    FINAL_CLASS=61
    OVERRIDE_METHOD=62
    SUPER_CALL=63
    PUBLIC_MODIFIER=64
    PRIVATE_MODIFIER=65
    LIST_TYPE=66
    DICTIONARY_TYPE=67
    RETURN_STATEMENT=68
    BREAK_STATEMENT=69
    CONTINUE_STATEMENT=70
    IDENTIFIER=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainMethod(self):
            return self.getTypedRuleContext(OOPsyParser.MainMethodContext,0)


        def EOF(self):
            return self.getToken(OOPsyParser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OOPsyParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(OOPsyParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return OOPsyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = OOPsyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 56
                self.classDecl()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.mainMethod()
            self.state = 63
            self.match(OOPsyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDecl(self):
            return self.getTypedRuleContext(OOPsyParser.MethodDeclContext,0)


        def attributeDecl(self):
            return self.getTypedRuleContext(OOPsyParser.AttributeDeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(OOPsyParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(OOPsyParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(OOPsyParser.LoopStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(OOPsyParser.ReturnStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(OOPsyParser.PrintStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(OOPsyParser.ExpressionStatementContext,0)


        def createStatement(self):
            return self.getTypedRuleContext(OOPsyParser.CreateStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(OOPsyParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(OOPsyParser.ContinueStatementContext,0)


        def getRuleIndex(self):
            return OOPsyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = OOPsyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.methodDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.attributeDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.loopStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.expressionStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.createStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 74
                self.breakStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 75
                self.continueStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD_KEYWORD(self):
            return self.getToken(OOPsyParser.METHOD_KEYWORD, 0)

        def MAIN_KEYWORD(self):
            return self.getToken(OOPsyParser.MAIN_KEYWORD, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(OOPsyParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(OOPsyParser.RIGHT_PARENTHESIS, 0)

        def block(self):
            return self.getTypedRuleContext(OOPsyParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(OOPsyParser.ParamListContext,0)


        def getRuleIndex(self):
            return OOPsyParser.RULE_mainMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainMethod" ):
                listener.enterMainMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainMethod" ):
                listener.exitMainMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainMethod" ):
                return visitor.visitMainMethod(self)
            else:
                return visitor.visitChildren(self)




    def mainMethod(self):

        localctx = OOPsyParser.MainMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(OOPsyParser.METHOD_KEYWORD)
            self.state = 79
            self.match(OOPsyParser.MAIN_KEYWORD)
            self.state = 80
            self.match(OOPsyParser.LEFT_PARENTHESIS)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==71:
                self.state = 81
                self.paramList()


            self.state = 84
            self.match(OOPsyParser.RIGHT_PARENTHESIS)
            self.state = 85
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_KEYWORD(self):
            return self.getToken(OOPsyParser.CLASS_KEYWORD, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OOPsyParser.IDENTIFIER)
            else:
                return self.getToken(OOPsyParser.IDENTIFIER, i)

        def LEFT_BRACE(self):
            return self.getToken(OOPsyParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(OOPsyParser.RIGHT_BRACE, 0)

        def INHERITS_KEYWORD(self):
            return self.getToken(OOPsyParser.INHERITS_KEYWORD, 0)

        def classElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OOPsyParser.ClassElementContext)
            else:
                return self.getTypedRuleContext(OOPsyParser.ClassElementContext,i)


        def getRuleIndex(self):
            return OOPsyParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = OOPsyParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(OOPsyParser.CLASS_KEYWORD)
            self.state = 88
            self.match(OOPsyParser.IDENTIFIER)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 89
                self.match(OOPsyParser.INHERITS_KEYWORD)
                self.state = 90
                self.match(OOPsyParser.IDENTIFIER)


            self.state = 93
            self.match(OOPsyParser.LEFT_BRACE)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1970324836974592) != 0):
                self.state = 94
                self.classElement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(OOPsyParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDecl(self):
            return self.getTypedRuleContext(OOPsyParser.AttributeDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(OOPsyParser.MethodDeclContext,0)


        def constructorDecl(self):
            return self.getTypedRuleContext(OOPsyParser.ConstructorDeclContext,0)


        def getRuleIndex(self):
            return OOPsyParser.RULE_classElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassElement" ):
                listener.enterClassElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassElement" ):
                listener.exitClassElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassElement" ):
                return visitor.visitClassElement(self)
            else:
                return visitor.visitChildren(self)




    def classElement(self):

        localctx = OOPsyParser.ClassElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classElement)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.attributeDecl()
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.methodDecl()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.constructorDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD_KEYWORD(self):
            return self.getToken(OOPsyParser.METHOD_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(OOPsyParser.IDENTIFIER, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(OOPsyParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(OOPsyParser.RIGHT_PARENTHESIS, 0)

        def block(self):
            return self.getTypedRuleContext(OOPsyParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(OOPsyParser.ParamListContext,0)


        def getRuleIndex(self):
            return OOPsyParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = OOPsyParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(OOPsyParser.METHOD_KEYWORD)
            self.state = 108
            self.match(OOPsyParser.IDENTIFIER)
            self.state = 109
            self.match(OOPsyParser.LEFT_PARENTHESIS)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==71:
                self.state = 110
                self.paramList()


            self.state = 113
            self.match(OOPsyParser.RIGHT_PARENTHESIS)
            self.state = 114
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HAS_ATTRIBUTE_KEYWORD(self):
            return self.getToken(OOPsyParser.HAS_ATTRIBUTE_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(OOPsyParser.IDENTIFIER, 0)

        def COLON_SEPARATOR(self):
            return self.getToken(OOPsyParser.COLON_SEPARATOR, 0)

        def typeName(self):
            return self.getTypedRuleContext(OOPsyParser.TypeNameContext,0)


        def SEMICOLON_SEPARATOR(self):
            return self.getToken(OOPsyParser.SEMICOLON_SEPARATOR, 0)

        def getRuleIndex(self):
            return OOPsyParser.RULE_attributeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDecl" ):
                listener.enterAttributeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDecl" ):
                listener.exitAttributeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDecl" ):
                return visitor.visitAttributeDecl(self)
            else:
                return visitor.visitChildren(self)




    def attributeDecl(self):
